--- a/trunk/src/Siesaso.Test.Gui/Form1.resx
+++ b/trunk/src/Siesaso.Test.Gui/Form1.resx
@@ -132,4 +132,7 @@
   <metadata name="entityPersister1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>168, 17</value>
   </metadata>
+  <metadata name="bindingSourceInterceptor1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>453, 17</value>
+  </metadata>
 </root>
