--- a/trunk/src/Siesaso.Test.Gui/Properties/Resources.resx
+++ b/trunk/src/Siesaso.Test.Gui/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Geschlecht" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Geschlecht.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Gürtel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Gürtel.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Verein" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Verein.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Geschlecht" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Geschlecht.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Judoka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Judoka.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
